--- a/UAS_MUHAMMAD_DAFA_MAFDAFIKI.ipynb
+++ b/UAS_MUHAMMAD_DAFA_MAFDAFIKI.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNh0K8dAxtRm6D00wdHeE+u",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPAUAE8CYmYJouohBONoleD"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Dafamafdafiki19/File-Unggahan-UAS/blob/main/UAS_MUHAMMAD_DAFA_MAFDAFIKI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "source": [
         "print \"Halo Dunia\" # SyntaxError: missing parentheses in call to 'print'. Did you mean print(\"Halo Dunia\")?"
@@ -50,6 +39,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DIATAS MERUPAKAN CONTOH SyntaxError, kenapa bisa terjadi Error? karena diawal subjek atau kata yang ingin di print, tidak ada tantang buka-tutup kurung (\"\").\n",
+        "Seharusnya yang benar adalah seperti dibawah ini"
+      ],
+      "metadata": {
+        "id": "jUlpfBV6qqR1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Halo Dunia\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gIMQLXT2rTeq",
+        "outputId": "0b1e3d2e-436c-43e4-c869-f565e321a47b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Halo Dunia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "bGI54VhWrS7h"
+      }
     }
   ]
 }
