Dibuat menggunakan Colab

--- a/UAS_PakAhmadRoihan_Python.ipynb
+++ b/UAS_PakAhmadRoihan_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQoCnKFLgRUKYdAn6+Xpnz",
+      "authorship_tag": "ABX9TyOygBPw/f/Xj0qDjK7xlAbf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,43 +27,52 @@
       ]
     },
     {
-      "source": [
-        "def binary_search(arr, x, low, high):\n",
-        "    if high >= low:\n",
-        "        mid = (high + low) // 2\n",
-        "        if arr[mid] == x:\n",
-        "            return True\n",
-        "        elif arr[mid] > x:\n",
-        "            return binary_search(arr, x, low, mid - 1)\n",
-        "        else:\n",
-        "            return binary_search(arr, x, mid + 1, high)\n",
-        "    else:\n",
-        "        return False\n",
-        "\n",
-        "with open(\"data/kamus.txt\", \"r\") as f:\n",
-        "\n",
-        "    kamus = [kata.strip().lower() for kata in f.readlines()]\n",
-        "\n",
-        "kata_cari = input(\"Masukkan kata yang ingin dicari: \").lower()\n",
-        "\n",
-        "if binary_search(kamus, kata_cari, 0, len(kamus) - 1):\n",
-        "    print(\"Kata ditemukan!\")\n",
-        "else:\n",
-        "    print(\"Kata tidak ditemukan.\")"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "id": "qchrOKWiyMhJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "JyeFG6QCyjUB"
       }
+    },
+    {
+      "source": [
+        "# Membuat list\n",
+        "my_list = [1, 2, 3, 'empat', 5.0]\n",
+        "\n",
+        "# Mengakses elemen\n",
+        "print(my_list[0])  # Output: 1\n",
+        "print(my_list[3])  # Output: empat\n",
+        "\n",
+        "# Menambahkan elemen\n",
+        "my_list.append(6)  # Menambahkan 6 di akhir list\n",
+        "my_list.insert(2, 'baru')  # Menambahkan 'baru' pada indeks 2\n",
+        "\n",
+        "# Menghapus elemen\n",
+        "my_list.remove('empat')  # Menghapus elemen 'empat'\n",
+        "del my_list[0]  # Menghapus elemen pada indeks 0\n",
+        "\n",
+        "# Mencetak list yang telah dimodifikasi\n",
+        "print(my_list)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8R-4jLJa2BBu",
+        "outputId": "46cb680b-53bd-4c70-8769-6f7950fe82d6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "empat\n",
+            "[2, 'baru', 3, 5.0, 6]\n"
+          ]
+        }
+      ]
     }
   ]
 }
