Dibuat menggunakan Colab

--- a/UAS_PakAhmadRoihan_Python.ipynb
+++ b/UAS_PakAhmadRoihan_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOygBPw/f/Xj0qDjK7xlAbf",
+      "authorship_tag": "ABX9TyPfpgtkVfKQcVmw0rhCxzY1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,41 +35,40 @@
     },
     {
       "source": [
-        "# Membuat list\n",
-        "my_list = [1, 2, 3, 'empat', 5.0]\n",
+        "# Membuka file dalam mode tulis ('w')\n",
+        "file = open(\"data.txt\", \"w\")\n",
         "\n",
-        "# Mengakses elemen\n",
-        "print(my_list[0])  # Output: 1\n",
-        "print(my_list[3])  # Output: empat\n",
+        "# Menulis string ke dalam file\n",
+        "file.write(\"Pemrograman Python Dasar\")\n",
         "\n",
-        "# Menambahkan elemen\n",
-        "my_list.append(6)  # Menambahkan 6 di akhir list\n",
-        "my_list.insert(2, 'baru')  # Menambahkan 'baru' pada indeks 2\n",
+        "# Menutup file\n",
+        "file.close()\n",
         "\n",
-        "# Menghapus elemen\n",
-        "my_list.remove('empat')  # Menghapus elemen 'empat'\n",
-        "del my_list[0]  # Menghapus elemen pada indeks 0\n",
+        "# Membuka file dalam mode baca ('r')\n",
+        "file = open(\"data.txt\", \"r\")\n",
         "\n",
-        "# Mencetak list yang telah dimodifikasi\n",
-        "print(my_list)"
+        "# Membaca isi file dan menampilkannya\n",
+        "isi_file = file.read()\n",
+        "print(isi_file)\n",
+        "\n",
+        "# Menutup file\n",
+        "file.close()"
       ],
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8R-4jLJa2BBu",
-        "outputId": "46cb680b-53bd-4c70-8769-6f7950fe82d6"
+        "id": "iR9ekF4t35Ap",
+        "outputId": "85296a3b-fad8-4729-d349-cfec2f18f8a4"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "empat\n",
-            "[2, 'baru', 3, 5.0, 6]\n"
+            "Pemrograman Python Dasar\n"
           ]
         }
       ]
