Dibuat menggunakan Colab

--- a/UAS_PakAhmadRoihan_Python.ipynb
+++ b/UAS_PakAhmadRoihan_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfpgtkVfKQcVmw0rhCxzY1",
+      "authorship_tag": "ABX9TyMQgmHlbtTlKJy3RapIbWOR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,47 +28,125 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "1. PENGGABUNGAN"
+      ],
       "metadata": {
-        "id": "JyeFG6QCyjUB"
+        "id": "RR89IOBO5bhU"
       }
     },
     {
       "source": [
-        "# Membuka file dalam mode tulis ('w')\n",
-        "file = open(\"data.txt\", \"w\")\n",
+        "string1 = \"Halo\"\n",
+        "string2 = \"Dunia\"\n",
         "\n",
-        "# Menulis string ke dalam file\n",
-        "file.write(\"Pemrograman Python Dasar\")\n",
         "\n",
-        "# Menutup file\n",
-        "file.close()\n",
+        "string_gabungan = string1 + \" \" + string2\n",
+        "print(string_gabungan)\n",
         "\n",
-        "# Membuka file dalam mode baca ('r')\n",
-        "file = open(\"data.txt\", \"r\")\n",
         "\n",
-        "# Membaca isi file dan menampilkannya\n",
-        "isi_file = file.read()\n",
-        "print(isi_file)\n",
-        "\n",
-        "# Menutup file\n",
-        "file.close()"
+        "daftar_kata = [\"Belajar\", \"Python\", \"di\", \"mana aja\"]\n",
+        "kalimat = \" \".join(daftar_kata)\n",
+        "print(kalimat)"
       ],
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "iR9ekF4t35Ap",
-        "outputId": "85296a3b-fad8-4729-d349-cfec2f18f8a4"
+        "id": "vKlkpl_K5gO7",
+        "outputId": "9d7eecbd-89cf-4522-8dd5-a27963f54755"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Pemrograman Python Dasar\n"
+            "Halo Dunia\n",
+            "Belajar Python di mana aja\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. PEMISAHAN"
+      ],
+      "metadata": {
+        "id": "JyeFG6QCyjUB"
+      }
+    },
+    {
+      "source": [
+        "teks = \"Ini adalah contoh program sederhana.\"\n",
+        "\n",
+        "\n",
+        "kata_kata = teks.split(\" \")\n",
+        "print(kata_kata)\n",
+        "\n",
+        "\n",
+        "data = \"apel,pisang,jeruk\"\n",
+        "buah = data.split(\",\")\n",
+        "print(buah)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZpV1jt2e5mxy",
+        "outputId": "145a2294-2014-4660-f8f6-e4b63066e270"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Ini', 'adalah', 'contoh', 'program', 'sederhana.']\n",
+            "['apel', 'pisang', 'jeruk']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Pencarian Substring (Finding Substrings)"
+      ],
+      "metadata": {
+        "id": "kfzYdkMh5pSw"
+      }
+    },
+    {
+      "source": [
+        "kalimat = \"Python adalah bahasa pemrograman yang populer.\"\n",
+        "\n",
+        "if \"Python\" in kalimat:\n",
+        "    print(\"Substring 'Python' ditemukan dalam kalimat.\")\n",
+        "\n",
+        "posisi = kalimat.find(\"bahasa\")\n",
+        "if posisi != -1:\n",
+        "    print(f\"Substring 'bahasa' ditemukan pada posisi {posisi}.\")"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CdnkZwsC5uOB",
+        "outputId": "27138f77-1b4b-4571-f5cb-8bb8e4f42f6b"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Substring 'Python' ditemukan dalam kalimat.\n",
+            "Substring 'bahasa' ditemukan pada posisi 14.\n"
           ]
         }
       ]
